--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -20,7 +20,9 @@
 
 /* Select the image inside the element with an id of basket (using its descendent relationship) */
 
-/*__write_selector_here__*/ {
+/*__write_selector_here__*/ 
+#basket 
+{
   position: absolute;
   z-index: 5;
   top: 291px;
@@ -29,7 +31,9 @@
 
 /* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
 
-/*__write_selector_here__*/ {
+/*__write_selector_here__*/ 
+
+{
   position: absolute;
   z-index: 4;
   top: 260px;
