--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -43,8 +43,7 @@
 /* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
 
 /*__write_selector_here__*/ 
-.    <img class="" src="images/kitty-5.png" alt="Kitty 5">
-
+.kitty-5
 {
   position: absolute;
   z-index: 3;
