--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -21,7 +21,7 @@
 /* Select the image inside the element with an id of basket (using its descendent relationship) */
 
 /*__write_selector_here__*/ 
-#basket 
+#basket img
 {
   position: absolute;
   z-index: 5;
@@ -32,7 +32,7 @@
 /* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
 
 /*__write_selector_here__*/ 
-#ball
+#ball img
 {
   position: absolute;
   z-index: 4;
